fix scrollbar

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -255,7 +255,7 @@ u{
 }
 *::-webkit-scrollbar-thumb {
   background-color: lightgrey;
-  border-radius: 10px;
+  border-radius: 0;
 }
 *::-webkit-scrollbar-thumb:hover{
   background-color: rgb(173, 173, 173);
